# pyvdif

./: .flake8  README.md  pyproject.toml
.circleci/: config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
docs/: conf.py  examples.rst  index.rst  installation.rst  reference.rst  vdif.rst
pyvdif/: __init__.py  header.py
scripts/: read_vdif.py
tests/: test_header.py  test_version.py
