[tool.poetry]
name = "PyVDIF"
version = "0.1.0"
description = "The Python3 package for VDIF (VLBI Data Interchange Format)"
readme = "README.md"
authors = ["scizorman <tueda1207@gmail.com>"]
repository = "https://github.com/scizorman/pyvdif"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^19.3b0"
codecov = "^2.0"
flake8 = "^3.7"
mypy = "^0.711.0"
pytest = "^3.0"
pytest-cov = "^2.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
